<resources>
    <string name="app_name">FlipFiveProject</string>
    <string name="name_game">Flip Five Game</string>
    <string name="start_new_game">Start new game</string>
    <string name="see_best_score">See best score</string>
    <string name="text_current_score">Current Score:</string>
    <string name="initial_value_current_score">0</string>
    <string name="text_best_score">Best score:</string>
    <string name="initial_value_best_score">0</string>
    <string name="description_hint_icon">Get hint</string>
    <string name="description_restart_icon">Restart game</string>
    <string name="description_white_image">White</string>
    <string name="description_black_image">Black</string>
    <string name="title_help">Help</string>
    <string name="description_help">\t\tThe goal of the game is to transform the grid of combined colored cells into a grid of all white cells or black cells.\n
        \t\tThe game is finished when all the cells of the grid have the same color, doesn\'t matter if they are black or white.</string>
</resources>
